--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
 		"typescript": "^5.7.2",
 		"typescript-eslint": "^8.19.1",
 		"vite": "^6.0.7",
-		"vitest": "^2.1.8"
+		"vitest": "^2.1.8",
+		"wrangler": "^4.23.0"
 	},
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.16",
