feat(deploy): migrate from Cloudflare Pages to Workers
- Replace @sveltejs/adapter-static with @sveltejs/adapter-cloudflare
- Convert wrangler.json to wrangler.toml for Workers configuration
- Add Workers-specific deployment scripts (deploy, deploy:preview, dev:wrangler)
- Update documentation to reflect Workers Builds Git integration
- Configure automatic deployments via Git push workflow

This migration enables full SvelteKit features and aligns with Cloudflare's
recommended approach as Workers receives their primary development focus.

--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
 		"ci:check": "deno run --allow-all scripts/test-github-actions.ts --dry-run",
 		"ci:help": "deno run --allow-all scripts/test-github-actions.ts --help",
 		"download": "deno run --allow-read --allow-write --allow-net scripts/download-resume.ts",
-		"pre-commit": "deno task fix-mermaid && pnpm run format && pnpm run lint && pnpm run check"
+		"pre-commit": "deno task fix-mermaid && pnpm run format && pnpm run lint && pnpm run check",
+		"deploy": "wrangler deploy",
+		"deploy:preview": "wrangler deploy --branch preview",
+		"dev:wrangler": "wrangler dev"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.2.4",
-		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/adapter-cloudflare": "^7.0.4",
 		"@sveltejs/kit": "^2.15.2",
 		"@sveltejs/vite-plugin-svelte": "^5.1.0",
 		"@testing-library/svelte": "^5.2.8",
